--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "cors": "^2.8.5",
+    "express": "^4.16.3",
+    "mongoose": "^6.7.2"
   },
   "engines": {
     "node": ">=14"
